--- a/src/views/movies/create.ejs
+++ b/src/views/movies/create.ejs
@@ -18,6 +18,17 @@
 			<input type="date" name="release_date">
 		</div>
 		<div>
+			<label>Actors:</label>
+			<i>Elegí uno o más actores</i>
+			<br>
+			<select name="actors" multiple>
+				<% actors.forEach(actor => { %>
+				<option value="<%= actor.id %>"> <%= actor.getFullName() %>  </option>
+				<% }) %>
+				<option value=""></option>
+			</select>
+		</div>
+		<div>
 			<label>Genre:</label>
 			<select name="genre_id">
 				<option value="">Elegí un género</option>
